@@ -1,170 +1,224 @@
 package com.example.booking.web.controller.customer;
 
-import static org.hamcrest.Matchers.*;
-import static org.mockito.ArgumentMatchers.*;
-import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-
-import java.util.List;
-import java.util.UUID;
-
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.http.MediaType;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.test.web.servlet.MockMvc;
-
 import com.example.booking.domain.Customer;
 import com.example.booking.domain.User;
+import com.example.booking.domain.UserRole;
 import com.example.booking.dto.customer.FavoriteRestaurantDto;
 import com.example.booking.dto.customer.ToggleFavoriteRequest;
 import com.example.booking.dto.customer.ToggleFavoriteResponse;
 import com.example.booking.repository.CustomerRepository;
 import com.example.booking.service.FavoriteService;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.http.MediaType;
+import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.test.web.servlet.MockMvc;
 
-@WebMvcTest(controllers = FavoriteController.class)
-@AutoConfigureMockMvc(addFilters = false)
+import java.math.BigDecimal;
+import java.time.LocalDateTime;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
+
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.*;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+
+@WebMvcTest(FavoriteController.class)
 class FavoriteControllerTest {
 
-    @Autowired private MockMvc mockMvc;
-    @MockBean private FavoriteService favoriteService;
-    @MockBean private CustomerRepository customerRepository;
+    @Autowired
+    private MockMvc mockMvc;
 
-    private User authedUser;
+    @MockBean
+    private FavoriteService favoriteService;
+
+    @MockBean
+    private CustomerRepository customerRepository;
+
     private Customer customer;
-    private java.util.UUID customerId;
+    private User user;
+    private FavoriteRestaurantDto favoriteDto;
 
     @BeforeEach
-    void setup() {
-        authedUser = new User();
-        UUID uid = UUID.randomUUID();
-        authedUser.setId(uid);
+    void setUp() {
+        user = new User();
+        user.setId(UUID.randomUUID());
+        user.setUsername("testuser");
+        user.setEmail("test@example.com");
+        user.setRole(UserRole.CUSTOMER);
+
         customer = new Customer();
-        customerId = UUID.randomUUID();
-        customer.setCustomerId(customerId);
-        when(customerRepository.findByUserId(uid)).thenReturn(java.util.Optional.of(customer));
-        SecurityContextHolder.getContext().setAuthentication(new UsernamePasswordAuthenticationToken(authedUser, "pwd"));
+        customer.setCustomerId(UUID.randomUUID());
+        customer.setUser(user);
+
+        favoriteDto = new FavoriteRestaurantDto();
+        favoriteDto.setRestaurantId(1);
+        favoriteDto.setRestaurantName("Test Restaurant");
+        favoriteDto.setAddress("123 Test St");
+        favoriteDto.setAverageRating(4.5);
+        favoriteDto.setReviewCount(10);
     }
 
-    @AfterEach
-    void teardown() {
-        SecurityContextHolder.clearContext();
-    }
-
-    // TC FC-001
     @Test
-    @DisplayName("should render favorites page with filters (FC-001)")
-    void shouldRenderFavoritesPage() throws Exception {
-        Page<FavoriteRestaurantDto> page = new PageImpl<>(List.of());
-        when(favoriteService.getFavoriteRestaurantsWithFilters(eq(customerId), any(), any(), any(), any(), any())).thenReturn(page);
-        mockMvc.perform(get("/customer/favorites").param("search", "pho").param("cuisineType", "Viet"))
-                .andExpect(status().isOk())
-                .andExpect(view().name("customer/favorites-advanced"))
-                .andExpect(model().attributeExists("favorites", "currentPage", "totalPages"));
-    }
+    @WithMockUser(username = "testuser", roles = "CUSTOMER")
+    void shouldDisplayFavoritesPage() throws Exception {
+        when(customerRepository.findByUserId(user.getId())).thenReturn(Optional.of(customer));
+        Page<FavoriteRestaurantDto> page = new PageImpl<>(Arrays.asList(favoriteDto));
+        when(favoriteService.getFavoriteRestaurantsWithFilters(
+                eq(customer.getCustomerId()), any(), any(), any(), any(), any())).thenReturn(page);
 
-    // TC FC-002
-    @Test
-    @DisplayName("should handle service error and still render view (FC-002)")
-    void shouldHandleServiceError() throws Exception {
-        when(favoriteService.getFavoriteRestaurantsWithFilters(eq(customerId), any(), any(), any(), any(), any()))
-                .thenThrow(new RuntimeException("boom"));
         mockMvc.perform(get("/customer/favorites"))
                 .andExpect(status().isOk())
                 .andExpect(view().name("customer/favorites-advanced"))
-                .andExpect(model().attributeExists("error"));
+                .andExpect(model().attributeExists("favorites"))
+                .andExpect(model().attributeExists("currentPage"))
+                .andExpect(model().attributeExists("totalPages"));
     }
 
-    // TC FC-003
     @Test
-    @DisplayName("should redirect to login when unauthenticated (FC-003)")
-    void shouldRedirectWhenUnauthenticated() throws Exception {
-        SecurityContextHolder.clearContext();
+    @WithMockUser(username = "testuser", roles = "CUSTOMER")
+    void shouldDisplayFavoritesPage_WithPagination() throws Exception {
+        when(customerRepository.findByUserId(user.getId())).thenReturn(Optional.of(customer));
+        Page<FavoriteRestaurantDto> page = new PageImpl<>(Arrays.asList(favoriteDto));
+        when(favoriteService.getFavoriteRestaurantsWithFilters(
+                eq(customer.getCustomerId()), any(), any(), any(), any(), any())).thenReturn(page);
+
+        mockMvc.perform(get("/customer/favorites")
+                        .param("page", "1")
+                        .param("size", "20"))
+                .andExpect(status().isOk())
+                .andExpect(model().attribute("currentPage", 1));
+    }
+
+    @Test
+    @WithMockUser(username = "testuser", roles = "CUSTOMER")
+    void shouldDisplayFavoritesPage_WithFilters() throws Exception {
+        when(customerRepository.findByUserId(user.getId())).thenReturn(Optional.of(customer));
+        Page<FavoriteRestaurantDto> page = new PageImpl<>(Arrays.asList(favoriteDto));
+        when(favoriteService.getFavoriteRestaurantsWithFilters(
+                eq(customer.getCustomerId()), any(), any(), any(), any(), any())).thenReturn(page);
+
+        mockMvc.perform(get("/customer/favorites")
+                        .param("search", "restaurant")
+                        .param("cuisineType", "Vietnamese")
+                        .param("priceRange", "100000-200000")
+                        .param("ratingFilter", "4"))
+                .andExpect(status().isOk())
+                .andExpect(model().attribute("search", "restaurant"))
+                .andExpect(model().attribute("cuisineType", "Vietnamese"));
+    }
+
+    @Test
+    void shouldRedirectToLogin_WhenUnauthenticated() throws Exception {
         mockMvc.perform(get("/customer/favorites"))
-                .andExpect(status().is3xxRedirection())
-                .andExpect(redirectedUrl("/login"));
+                .andExpect(status().is3xxRedirection());
     }
 
-    // TC FC-004
     @Test
-    @DisplayName("should toggle favorite successfully (FC-004)")
-    void shouldToggleFavorite() throws Exception {
-        ToggleFavoriteResponse resp = ToggleFavoriteResponse.success(true, 5, 1);
-        when(favoriteService.toggleFavorite(eq(customerId), org.mockito.ArgumentMatchers.<ToggleFavoriteRequest>any())).thenReturn(resp);
+    @WithMockUser(username = "testuser", roles = "CUSTOMER")
+    void shouldToggleFavorite_Add() throws Exception {
+        when(customerRepository.findByUserId(user.getId())).thenReturn(Optional.of(customer));
+        ToggleFavoriteResponse response = ToggleFavoriteResponse.success(true, 15, 1);
+        when(favoriteService.toggleFavorite(eq(customer.getCustomerId()), any(ToggleFavoriteRequest.class)))
+                .thenReturn(response);
+
         mockMvc.perform(post("/customer/favorites/toggle")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"restaurantId\":1}"))
+                        .content("{\"restaurantId\":1}")
+                        .with(csrf()))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.success", is(true)));
+                .andExpect(jsonPath("$.success").value(true))
+                .andExpect(jsonPath("$.isFavorited").value(true));
     }
 
-    // TC FC-005
     @Test
-    @DisplayName("should return 400 when customer not found (FC-005)")
-    void shouldReturnBadRequestWhenNoCustomer() throws Exception {
-        // override to simulate unknown user
-        SecurityContextHolder.clearContext();
-        SecurityContextHolder.getContext().setAuthentication(new UsernamePasswordAuthenticationToken(new User(), "pwd"));
-        when(customerRepository.findByUserId(any())).thenReturn(java.util.Optional.empty());
+    @WithMockUser(username = "testuser", roles = "CUSTOMER")
+    void shouldToggleFavorite_Remove() throws Exception {
+        when(customerRepository.findByUserId(user.getId())).thenReturn(Optional.of(customer));
+        ToggleFavoriteResponse response = ToggleFavoriteResponse.success(false, 14, 1);
+        when(favoriteService.toggleFavorite(eq(customer.getCustomerId()), any(ToggleFavoriteRequest.class)))
+                .thenReturn(response);
+
         mockMvc.perform(post("/customer/favorites/toggle")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"restaurantId\":1}"))
-                .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.success", is(false)));
-    }
-
-    // TC FC-006
-    @Test
-    @DisplayName("checkFavorite returns false when unauthenticated (FC-006)")
-    void checkFavorite_unauthenticated() throws Exception {
-        SecurityContextHolder.clearContext();
-        mockMvc.perform(get("/customer/favorites/check/1"))
+                        .content("{\"restaurantId\":1}")
+                        .with(csrf()))
                 .andExpect(status().isOk())
-                .andExpect(content().string("false"));
+                .andExpect(jsonPath("$.success").value(true))
+                .andExpect(jsonPath("$.isFavorited").value(false));
     }
 
-    // TC FC-007
     @Test
-    @DisplayName("checkFavorite returns true when favorited (FC-007)")
-    void checkFavorite_true() throws Exception {
-        when(favoriteService.isFavorited(customerId, 1)).thenReturn(true);
+    @WithMockUser(username = "testuser", roles = "CUSTOMER")
+    void shouldToggleFavorite_CustomerNotFound() throws Exception {
+        when(customerRepository.findByUserId(user.getId())).thenReturn(Optional.empty());
+
+        mockMvc.perform(post("/customer/favorites/toggle")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content("{\"restaurantId\":1}")
+                        .with(csrf()))
+                .andExpect(status().isBadRequest());
+    }
+
+    @Test
+    @WithMockUser(username = "testuser", roles = "CUSTOMER")
+    void shouldCheckFavorite() throws Exception {
+        when(customerRepository.findByUserId(user.getId())).thenReturn(Optional.of(customer));
+        when(favoriteService.isFavorited(customer.getCustomerId(), 1)).thenReturn(true);
+
         mockMvc.perform(get("/customer/favorites/check/1"))
                 .andExpect(status().isOk())
                 .andExpect(content().string("true"));
     }
 
-    // TC FC-008
     @Test
-    @DisplayName("getFavoritedRestaurantIds returns list (FC-008)")
-    void getFavoritedIds_list() throws Exception {
-        when(favoriteService.getFavoritedRestaurantIds(customerId)).thenReturn(List.of(1,2,3));
+    @WithMockUser(username = "testuser", roles = "CUSTOMER")
+    void shouldCheckFavorite_NotFavorited() throws Exception {
+        when(customerRepository.findByUserId(user.getId())).thenReturn(Optional.of(customer));
+        when(favoriteService.isFavorited(customer.getCustomerId(), 1)).thenReturn(false);
+
+        mockMvc.perform(get("/customer/favorites/check/1"))
+                .andExpect(status().isOk())
+                .andExpect(content().string("false"));
+    }
+
+    @Test
+    @WithMockUser(username = "testuser", roles = "CUSTOMER")
+    void shouldGetFavoritedRestaurantIds() throws Exception {
+        when(customerRepository.findByUserId(user.getId())).thenReturn(Optional.of(customer));
+        when(favoriteService.getFavoritedRestaurantIds(customer.getCustomerId()))
+                .thenReturn(Arrays.asList(1, 2, 3));
+
         mockMvc.perform(get("/customer/favorites/ids"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0]", is(1)))
-                .andExpect(jsonPath("$[1]", is(2)))
-                .andExpect(jsonPath("$[2]", is(3)));
+                .andExpect(jsonPath("$[0]").value(1))
+                .andExpect(jsonPath("$[1]").value(2))
+                .andExpect(jsonPath("$[2]").value(3));
     }
 
-    // TC FC-009
     @Test
-    @DisplayName("getFavoritedRestaurantIds handles error (FC-009)")
-    void getFavoritedIds_error() throws Exception {
-        when(favoriteService.getFavoritedRestaurantIds(customerId)).thenThrow(new RuntimeException("boom"));
-        mockMvc.perform(get("/customer/favorites/ids"))
-                .andExpect(status().isInternalServerError())
-                .andExpect(jsonPath("$", hasSize(0)));
+    @WithMockUser(username = "testuser", roles = "CUSTOMER")
+    void shouldHandleException() throws Exception {
+        when(customerRepository.findByUserId(user.getId())).thenReturn(Optional.of(customer));
+        when(favoriteService.getFavoriteRestaurantsWithFilters(
+                eq(customer.getCustomerId()), any(), any(), any(), any(), any()))
+                .thenThrow(new RuntimeException("Service error"));
+
+        mockMvc.perform(get("/customer/favorites"))
+                .andExpect(status().isOk())
+                .andExpect(view().name("customer/favorites-advanced"))
+                .andExpect(model().attributeExists("error"));
     }
 }
-
-
